@@ -5,6 +5,7 @@
 * Dev - Added in an option to disable the collapse function on single posts
 * Dev - Updated "Tested up to" WordPress version
 * Dev - Fixed archive excerpt display when there is not post content
+* Dev - Renamed the Object abstract class to Frame
 
 ### 1.1.1
 * Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
